create github pages

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="cid-qyY7WeZi1w mbr-parallax-background" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="cid-qyY7WeZi1w mbr-parallax-background" id="header2-0">
 
     
 
